--- a/Robust.API/appsettings.json
+++ b/Robust.API/appsettings.json
@@ -2,11 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=Robust;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=True;Trust Server Certificate=True;Command Timeout=0"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "jwt": {
+    "issuer": "",
+    "audience": "",
+    "Key": "Str?ongS!trin_gK_ey"
+  },
     "AllowedHosts": "*"
   }
