--- a/Robust.API/appsettings.json
+++ b/Robust.API/appsettings.json
@@ -9,9 +9,9 @@
     }
   },
   "jwt": {
-    "issuer": "",
-    "audience": "",
-    "Key": "Str?ongS!trin_gK_ey"
+    "issuer": "localhost:7100",
+    "audience": "localhost:4200",
+    "Key": "S!#EC r_?et Str?o  ngS!   trin_gK  _e y"
   },
     "AllowedHosts": "*"
   }
